fix: repositionner le bouton de retour en haut de page et le rendre visible lors du défilement

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -128,7 +128,11 @@ button{
 /* --------------boutton scroll to top------------------------- */ 
 #scroll-to-top {
     display: none;
-    width: 300px;
+    position: fixed;
+    bottom: 20px;
+    right: 1%;
+    z-index: 100;
+    width: 100px;
 }
 
 /* -----------------------css swipper------------------------- */
